{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 27,
  "lineage": "768d98da-ba70-deff-ed02-687f1a8d91a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03402f9ee41dc5a68",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-11-174-151.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.174.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005383956f2e5fb96",
            "arn": "arn:aws:ec2:eu-west-2:273714102059:instance/i-03ecc5615e30391f6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ecc5615e30391f6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kosi-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-000e697e21d856ec5"
              }
            ],
            "primary_network_interface_id": "eni-000e697e21d856ec5",
            "private_dns": "ip-10-0-0-172.eu-west-2.compute.internal",
            "private_ip": "10.0.0.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04268abb44e5c8fba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085b4e3b1444f4d95",
            "tags": {
              "Name": "Web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d289e0a164ae59fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.prod_network",
            "aws_security_group.allow_web",
            "aws_subnet.prod_subnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:273714102059:internet-gateway/igw-0b9e606ac44c02c28",
            "id": "igw-0b9e606ac44c02c28",
            "owner_id": "273714102059",
            "vpc_id": "vpc-08a4ddba56e9a6cdf"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-05eedf3989ac543c0",
                "device_index": 0,
                "instance": "i-03ecc5615e30391f6"
              }
            ],
            "id": "eni-000e697e21d856ec5",
            "ipv6_address_count": 0,
            "mac_address": "06:ce:39:0f:d0:46",
            "private_ip": "10.0.0.172",
            "private_ips": [
              "10.0.0.172"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d289e0a164ae59fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085b4e3b1444f4d95"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.prod_subnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064fa192eff45267f",
            "owner_id": "273714102059",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod"
            },
            "vpc_id": "vpc-08a4ddba56e9a6cdf"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:273714102059:security-group/sg-0d289e0a164ae59fe",
            "description": "Allow https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d289e0a164ae59fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "273714102059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a4ddba56e9a6cdf"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:273714102059:subnet/subnet-085b4e3b1444f4d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-085b4e3b1444f4d95",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273714102059",
            "tags": {
              "Name": "prod_server01"
            },
            "vpc_id": "vpc-08a4ddba56e9a6cdf"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:273714102059:vpc/vpc-08a4ddba56e9a6cdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc7b5af78766b05f",
            "default_route_table_id": "rtb-0da2e2e25852744fa",
            "default_security_group_id": "sg-0f3d957396110d15f",
            "dhcp_options_id": "dopt-943e03fc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a4ddba56e9a6cdf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0da2e2e25852744fa",
            "owner_id": "273714102059",
            "tags": {
              "Name": "prod_vpc"
            }
          }
        }
      ]
    }
  ]
}